# about-me

./: .clang-format  .gitignore  .md  404.html  CNAME  FORMAT_SPEC.md  GSoC-Proposal.md  README.md  baidusitemap.xml  index.html  index.json  index.xml  local-search.xml  pixi.toml  pyproject.toml  robots.txt  search.xml  sitemap.txt  sitemap.xml
645810896/: index.html
646752343/: index.html
646812253/: index.html
655902377/: index.html
659510753/: index.html
661692275/: index.html
669358870/: index.html
669359855/: index.html
669360731/: index.html
670190357/: index.html
670191053/: index.html
673852429/: index.html
674157958/: index.html
679782886/: index.html
680412313/: index.html
682031684/: index.html
683463723/: index.html
686296374/: index.html
692886292/: index.html
694365783/: index.html
696878184/: index.html
702197261/: index.html
archives/: index.html
article/: constexpr.md
articles/: index.html  index.xml
authors/: index.html  index.xml
categories/: index.html  index.xml
code/: cindex.pyi  compile-time-counter.cpp  dynamic-type-demo.cpp  stmp-polymorphic.cpp  the-true-any.cpp  type-list-sort.cpp  update.yaml
css/: highlight-dark.css  index.css  main.bundle.min.134fe93564843895a739793a43308dcf256fd6344ebfdf90292975c756466c42487cdf8e129e25d94c0bf61c1e68ddddc879c28a64077d7a672078cf0db00b95.css  main.bundle.min.1c9cd0d1ebaf117272b5c4f6bd49878475cb210d5e0da4f061632d779f5bb46851881c187e6e634dba5071c4e3d80e7d5cec1dd80443b2fa68acd358f9eda881.css  main.css  (+19 more)
en-us/: 404.html  index.html  index.json  index.xml  (+1 more)
(+443 files in other folders)
